Bug 1610093 - Fix getScreenCTM when parent is transformed. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D136088